--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,15 +1,24 @@
 <!-- Plugin Configuration File. Read more: https://plugins.jetbrains.com/docs/intellij/plugin-configuration-file.html -->
 <idea-plugin>
     <id>com.github.prudhvir3ddy.jbinpb</id>
-    <name>JBINPB</name>
+    <name>Indian Progress Bar</name>
     <vendor>prudhvir3ddy</vendor>
 
     <depends>com.intellij.modules.platform</depends>
 
-    <resource-bundle>messages.MyBundle</resource-bundle>
+    <resource-bundle>messages.IndianBundle</resource-bundle>
 
-    <extensions defaultExtensionNs="com.intellij">
-        <toolWindow factoryClass="com.github.prudhvir3ddy.jbinpb.toolWindow.MyToolWindowFactory" id="MyToolWindow"/>
-        <postStartupActivity implementation="com.github.prudhvir3ddy.jbinpb.startup.MyProjectActivity" />
-    </extensions>
+    <actions>
+        <action class="com.github.prudhvir3ddy.jbinpb.RamaTimeAction" id="RamaTime" internal="true" >
+            <add-to-group group-id="Internal.UI" anchor="before" relative-to-action="ShowProgressTestDialogAction" />
+        </action>
+    </actions>
+
+    <applicationListeners>
+        <listener class="com.github.prudhvir3ddy.jbinpb.IndianDynamicPluginListener"
+                  topic="com.intellij.ide.plugins.DynamicPluginListener"/>
+        <listener class="com.github.prudhvir3ddy.jbinpb.IndianAppLifecycleListener"
+                  topic="com.intellij.ide.AppLifecycleListener"/>
+    </applicationListeners>
+
 </idea-plugin>
