updated plugin name with version

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,10 @@
 # IntelliJ Platform Artifacts Repositories -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
 pluginGroup = com.github.prudhvir3ddy.jbinpb
-pluginName = JBINPB
+pluginName = Indian Progress Bar
 pluginRepositoryUrl = https://github.com/prudhvir3ddy/JBINPB
 # SemVer format -> https://semver.org
-pluginVersion = 0.0.3
+pluginVersion = 0.0.2
 
 # Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
 pluginSinceBuild = 243
